@@ -3,63 +3,80 @@ package binance_client;
 import org.bouncycastle.crypto.CryptoException;
 import org.bouncycastle.crypto.Signer;
 import org.bouncycastle.crypto.params.Ed25519PrivateKeyParameters;
+import org.bouncycastle.crypto.params.Ed25519PublicKeyParameters;
 import org.bouncycastle.crypto.signers.Ed25519Signer;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.List;
+import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.TemporalUnit;
+import java.util.*;
 
 // https://developers.binance.com/docs/binance-spot-api-docs/testnet/fix-api#signaturecomputation
 
 public class SignatureGeneration
 {
-    private final static String publicKeyFile = "/home/andtokm/Documents/Binance/ssh_Key/ed25519.pub";
-    private final static String privateKeyFile = "/home/andtokm/Documents/Binance/ssh_Key/ed25519.pem";
+    private static final String publicKeyFile  = "/home/andtokm/Documents/Binance/ssh_Key/ed25519.pub";
+    private static final String privateKeyFile = "/home/andtokm/Documents/Binance/ssh_Key/ed25519.pem";
 
-    public static void readPubicKey() throws IOException
+    private static final String TIMESTAMP_PATTERN = "yyyyMMdd-HH:mm:ss.SSS";
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern(TIMESTAMP_PATTERN);
+
+    public static Ed25519PublicKeyParameters loadPublicKey() throws IOException
     {
-        String key = Files.readString(Paths.get(publicKeyFile), Charset.defaultCharset());
-        List<String> lines = Arrays.asList(key.split("\n"));
-        System.out.println(lines.get(1));
+        byte[] bytes = Files.readAllBytes(Paths.get(publicKeyFile));
+
+        System.out.println(new String(bytes));
+
+        return new Ed25519PublicKeyParameters(bytes, 0);
     }
 
-    public static Ed25519PrivateKeyParameters readPrivateKey() throws IOException
+    public static Ed25519PrivateKeyParameters loadPrivateKey() throws IOException
     {
         byte[] privateKeyBytes = Files.readAllBytes(Paths.get(privateKeyFile));
-        Ed25519PrivateKeyParameters privateKey = new Ed25519PrivateKeyParameters(privateKeyBytes, 0);
-        return privateKey;
+        return  new Ed25519PrivateKeyParameters(privateKeyBytes, 0);
     }
 
+    public static String getCurrentTime()
+    {
+        return FORMATTER.format(LocalDateTime.now().atZone(ZoneId.of("GMT")));
+    }
 
     public static void generateSignature() throws IOException, CryptoException
     {
-        byte[] privateKeyBytes = Files.readAllBytes(Paths.get(privateKeyFile));
-        Ed25519PrivateKeyParameters privateKey = readPrivateKey();
+        Ed25519PrivateKeyParameters privateKey = loadPrivateKey();
+        List<String> params = List.of(
+                "100500",
+                "SPOT",
+                "1",
+                getCurrentTime());
 
-        List<String> params = List.of("5JQmUOsm", "SPOT", "1", "20240612-08:52:21.613");
-
-        String data = String.join( Character.toString(1), params);
+        final String data = String.join( Character.toString(1), params);
         final byte[] message = data.getBytes();
-
-        System.err.println(data);
-
 
         // create the signature
         Signer signer = new Ed25519Signer();
         signer.init(true, privateKey);
         signer.update(message, 0, message.length);
-        byte[] signature = signer.generateSignature();
+        byte[] signatureBytes = signer.generateSignature();
 
-        System.out.println(new String(signature));
+        String signature = new String(Base64.getEncoder().encode(signatureBytes));
+        System.out.println(signature);
     }
 
     public static void main(String[] args) throws IOException, CryptoException
     {
         // readPubicKey();
         // readPrivateKey();
-        generateSignature();
+        // generateSignature();
+
+        // System.out.println(getCurrentTime());
+
     }
 }
